2007-06-07  Jean-Louis Martineau <martineau@zmanda.com>
	Christopher McCrory found the cause of the problem.
	* server-src/find.c: Send ouput to stderr.

2007-06-07  Jean-Louis Martineau <martineau@zmanda.com>
	* configure.in: detect GNU tar's 'backup' and ignore it.  Thanks
	  to Jeanna Geier <jeanna@webteam.net> for spotting this.

2007-06-05  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/util.c: Don't use -w flags for od execution.

2007-06-05  Dustin J. Mitchell <dustin@zmanda.com>
	* client-src/selfcheck.c: fix formatting typo
	* common-src/security.h: fix prototypes in comments
	* common-src/security-util.c common-src/util.c: fix 
	  vstralloc errors
	* common-src/debug.c common-src/amanda.h: remove 
	  debug_prefix_time
	* changer-src/scsi-linux.c changer-src/chg-scsi-chio.c
	  changer-src/scsi-cam.c client-src/calcsize.c
	  recover-src/amrecover.c server-src/driver.c
	  client-src/sendbackup-gnutar.c server-src/find.c
	  server-src/diskfile.c : format string / i18n tweaks
	* common-src/amcrypt-ossl.sh.in: fix shell quoting

2007-06-04  Dustin J. Mitchell <dustin@zmanda.com>
	* changer-src/sense.c server-src/driver.c server-src/reporter.c
	  server-src/amadmin.c server-src/amtape.c common-src/amanda.h:
	  use T_() instead of _T() as the macro flagging static strings
	  in need of translation; fixes compilation error on Mac OS X, where
	  _T is defined in the system headers.

2007-06-04  Dustin J. Mitchell <dustin@zmanda.com>
	* changer-src/chg-zd-mtx.sh.in changer-src/chg-multi.sh.in:
	  use chg-lib.sh fully, fix i18n problems.

2007-06-04  Dustin J. Mitchell <dustin@zmanda.com>
	* common-src/krb5-security.c common-src/bsdtcp-security.c
	  common-src/security-util.c: check results from getnameinfo()
	  correctly

2007-06-04  Dustin J. Mitchell <dustin@zmanda.com>
	* server-src/amstatus.pl.in: use perl flags -Tw

2007-06-04  Dustin J. Mitchell <dustin@zmanda.com>
	* common-src/debug.c common-src/error.c: fix compilation errors